<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/hello_world"
        android:textSize="30dp" />


    <ScrollView
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:background="@color/material_blue_grey_800"
                android:text="@string/Button1"
                android:textColor="@color/abc_primary_text_material_dark" />


            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button1"
                android:layout_margin="5dp"
                android:background="@color/material_blue_grey_800"
                android:text="@string/Button2"
                android:textColor="@color/abc_primary_text_material_dark" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@color/material_blue_grey_800"
                android:text="@string/Button3"
                android:textColor="@color/abc_primary_text_material_dark" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button3"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@color/material_blue_grey_800"
                android:text="@string/Button4"
                android:textColor="@color/abc_primary_text_material_dark" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@color/material_blue_grey_800"
                android:text="@string/Button5"
                android:textColor="@color/abc_primary_text_material_dark" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button5"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@color/material_blue_grey_800"
                android:text="@string/Button6"
                android:textColor="@color/abc_primary_text_material_dark" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
